Add main structure.

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=localization-db;Username=localization-db;Password=pass123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
