--- a/backend/localisation.csproj
+++ b/backend/localisation.csproj
@@ -5,4 +5,12 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<RootNamespace>star_wars</RootNamespace>
 	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" />
+		<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0" />
+		<PackageReference Include="FluentValidation" Version="11.11.0" />
+		<PackageReference Include="FluentValidation.AspNetCore" Version="11.3.1" />
+	</ItemGroup>
 </Project>
