--- a/backend/dockerfile
+++ b/backend/dockerfile
@@ -1,21 +1,16 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-EXPOSE 80
-EXPOSE 443
+EXPOSE 2000
+EXPOSE 3443
 
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
-COPY ["./localisation.csproj", "localisation/"]
-RUN dotnet restore "localisation/localisation.csproj"
 COPY . .
-RUN dotnet build "localisation.csproj" -c Release -o /app/build -r linux-x64
-
-# FROM build AS publish
-# RUN dotnet publish "localisation.csproj" -c Release -o /app/publish -r linux-x64
+RUN dotnet restore "localisation.csproj"
+RUN dotnet publish "localisation.csproj" -c Release -o /app/publish -r linux-x64 --self-contained false
 
 FROM base AS final
-
 WORKDIR /app
-COPY --from=build /app/build .
+COPY --from=build /app/publish .
 COPY ./wwwroot ./wwwroot
 ENTRYPOINT ["dotnet", "localisation.dll"]
