--- a/frontend/dockerfile
+++ b/frontend/dockerfile
@@ -16,11 +16,8 @@ COPY . .
 # Build the app
 RUN npm run build
 
-# Install serve to run the application
-RUN npm install -g serve
-
-# Make port 3000 available to the world outside this container
+# Expose port 3000
 EXPOSE 3000
 
-# Run the app when the container launches
-CMD ["serve", "-s", "dist", "-l", "3000"]
+# Start the Next.js app in production mode
+CMD ["npm", "start"]
